# cloud_reg

./: CMakeLists.txt  CloudReg.cpp  CloudReg.hpp  InputHandler.cpp  InputHandler.hpp  InputManager.cpp  InputManager.hpp  README.md  matconv.hpp  pc_0.cpp  pc_1.cpp  pc_3.cpp  pc_3_1.cpp  ply_loader.cpp  ply_loader.hpp  point_sampler.cpp  point_sampler.hpp  poly_gen.cpp  poly_gen.hpp
pc_2/: compare.cpp  gencorr.cpp  sample.cpp  test_robustness.cpp  try_icp.cpp  try_icp_hulls.cpp  try_opengr.cpp  try_opengr_multithread.cpp  try_seg.cpp  try_teaser.cpp  try_teaser_ransac.cpp  try_teaser_ransac_i.cpp
